--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "joi": "^17.13.3",
+    "joi-browser": "^13.4.0",
     "mongodb": "^6.12.0",
     "mongoose": "^8.8.4",
     "react": "^18.3.1",
